generated/checkers/refine/KN-Double-Free-5aa2184e-2/build_logs/syntax-repair-refine-2-3/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘bool {anonymous}::SAGenTestChecker::isFalsePositive(const clang::Expr*, const clang::MemberExpr*, const clang::ParmVarDecl*, const clang::ento::CallEvent&, const clang::LabelStmt*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:786:82: error: invalid conversion from ‘const clang::VarDecl*’ to ‘const clang::ParmVarDecl*’ [-fpermissive]
  786 |                                                       BaseParam->getCanonicalDecl(), C)) {
      |                                                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~^~
      |                                                                                  |
      |                                                                                  const clang::VarDecl*
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:720:78: note:   initializing argument 3 of ‘bool {anonymous}::SAGenTestChecker::isImmediateNullificationAfterLabel(const clang::LabelStmt*, const clang::FieldDecl*, const clang::ParmVarDecl*, clang::ento::CheckerContext&) const’
  720 |                                                           const ParmVarDecl *BaseP,
      |                                                           ~~~~~~~~~~~~~~~~~~~^~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:29772: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:29779: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
